# SDD

./: .gitignore  README.md  emcap-local.db  flutter-errors-parse.txt  tmp-i18n_bundle_test.dart.txt  tmp-lookup_field_test.dart.txt  tmp-organization_profile_util_test.dart.txt
platform/api/: _run_tests.bat  emcap-local.db  emcap.db  pyproject.toml  run_gap_tests.py
platform/api/migrations/: 001_baseline.sql  002_system_columns.sql  003_tenant_layout_override.sql
platform/api/scripts/: migrate.py
platform/api/tests/: conftest.py  test_admin_api.py  test_admin_field_access_override.py  test_admin_ops_isolation.py  test_auth_security.py  test_client_api_gaps.py  test_crm_e2e.py  test_crm_entity_fields.py  test_customer_payment_entities.py  test_document_hooks.py  test_entity_pagination.py  test_entity_registry.py  test_entity_system_contract.py  test_finance_field_security.py  test_formula_engine.py  test_health.py  test_inventory_e2e.py  test_inventory_product_smoke.py  test_invoice_entities.py  test_journal_double_entry.py  test_layout_merge.py  test_layout_override.py  test_metadata_validation.py  test_metadata_workflow.py  test_migrations.py  test_module_report_menus.py  test_notification_template_render.py  test_oauth_provider.py  test_order_chain_entities.py  test_organization_profile_admin.py  test_platform_core_unchanged.py  test_platform_services.py  test_postgres_integration.py  test_procurement_sales_entity_fields.py  test_product_stock_guard.py  test_purchase_order_entities.py  test_rbac.py  test_report_schedule_admin.py  test_sales_order_entities.py  (+8 more)
(+956 files in other folders)
